fix column collapse

--- a/static/css/src/components/_grid.scss
+++ b/static/css/src/components/_grid.scss
@@ -36,13 +36,14 @@
         }
 
         @media only screen and (min-width: 480px) {
-            margin: 10px;
+            margin: 0;
+            padding: 10px;
         }
 
         @media only screen and (min-width: 768px) {
-            margin: 10%;
+            padding: 10%;
             &:last-child {
-                margin-bottom: 0;
+                padding-bottom: 0;
             }
         }
 
