--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1360,33 +1360,34 @@ footer a {
 @media only screen and (min-width: 480px) {
   /* line 29, src/components/_grid.scss */
   .column .item {
-    margin: 10px;
+    margin: 0;
+    padding: 10px;
   }
 }
 @media only screen and (min-width: 768px) {
   /* line 29, src/components/_grid.scss */
   .column .item {
-    margin: 10%;
+    padding: 10%;
   }
-  /* line 44, src/components/_grid.scss */
+  /* line 45, src/components/_grid.scss */
   .column .item:last-child {
-    margin-bottom: 0;
+    padding-bottom: 0;
   }
 }
-/* line 49, src/components/_grid.scss */
+/* line 50, src/components/_grid.scss */
 .column .item .detail-link {
   display: block;
 }
-/* line 53, src/components/_grid.scss */
+/* line 54, src/components/_grid.scss */
 .column .item:first-child {
   margin-top: 0;
 }
-/* line 59, src/components/_grid.scss */
+/* line 60, src/components/_grid.scss */
 .column .item.show-meta .overlay, .column .item.show-meta .meta {
   opacity: 1;
   pointer-events: auto;
 }
-/* line 64, src/components/_grid.scss */
+/* line 65, src/components/_grid.scss */
 .column .item.show-meta h4 {
   opacity: 1;
   -moz-transition: opacity 1s cubic-bezier(0.42, 0, 0.58, 1) 0.4s;
@@ -1395,7 +1396,7 @@ footer a {
   -webkit-transition-delay: 0.4s;
   transition: opacity 1s cubic-bezier(0.42, 0, 0.58, 1) 0.4s;
 }
-/* line 69, src/components/_grid.scss */
+/* line 70, src/components/_grid.scss */
 .column .item.show-meta h1 {
   -webkit-animation: detailTitle 1s 0s cubic-bezier(0.215, 0.61, 0.355, 1) 1 forwards;
   -moz-animation: detailTitle 1s 0s cubic-bezier(0.215, 0.61, 0.355, 1) 1 forwards;
@@ -1408,11 +1409,11 @@ footer a {
   -webkit-transition-delay: 0s;
   transition: opacity 0.5s cubic-bezier(0.42, 0, 0.58, 1) 0s;
 }
-/* line 75, src/components/_grid.scss */
+/* line 76, src/components/_grid.scss */
 .no-touch .column .item.show-meta figure:hover {
   cursor: url(../img/cursor/minimize-cursor.svg), auto;
 }
-/* line 81, src/components/_grid.scss */
+/* line 82, src/components/_grid.scss */
 .column .item .overlay {
   background-color: rgba(0, 0, 0, 0.6);
   opacity: 0;
@@ -1423,7 +1424,7 @@ footer a {
   transition: opacity 0.5s cubic-bezier(0.42, 0, 0.58, 1) 0s;
   pointer-events: none;
 }
-/* line 89, src/components/_grid.scss */
+/* line 90, src/components/_grid.scss */
 .column .item .meta {
   width: 100%;
   text-align: center;
@@ -1436,12 +1437,12 @@ footer a {
   transition: opacity 1s cubic-bezier(0.42, 0, 0.58, 1) 0s;
 }
 @media only screen and (min-width: 480px) {
-  /* line 89, src/components/_grid.scss */
+  /* line 90, src/components/_grid.scss */
   .column .item .meta {
     width: 200%;
   }
 }
-/* line 102, src/components/_grid.scss */
+/* line 103, src/components/_grid.scss */
 .column .item h1 {
   margin: 20px 0;
   text-transform: uppercase;
@@ -1453,7 +1454,7 @@ footer a {
   -webkit-transition-delay: 0s;
   transition: opacity 1s cubic-bezier(0.42, 0, 0.58, 1) 0s;
 }
-/* line 110, src/components/_grid.scss */
+/* line 111, src/components/_grid.scss */
 .column .item h4 {
   color: #8c9397;
   opacity: 0;
@@ -1464,11 +1465,11 @@ footer a {
   -webkit-transition-delay: 0s;
   transition: opacity 1s cubic-bezier(0.42, 0, 0.58, 1) 0s;
 }
-/* line 115, src/components/_grid.scss */
+/* line 116, src/components/_grid.scss */
 .column .item h4 a {
   color: #8c9397;
 }
-/* line 120, src/components/_grid.scss */
+/* line 121, src/components/_grid.scss */
 .column .item .inquire {
   color: #fb2323;
   font-size: 14px;
@@ -1480,33 +1481,33 @@ footer a {
   -webkit-transition-delay: 0s;
   transition: color 0.3s linear 0s;
 }
-/* line 128, src/components/_grid.scss */
+/* line 129, src/components/_grid.scss */
 .no-touch .column .item .inquire:hover {
   color: #ffffff;
 }
 @media only screen and (min-width: 480px) {
-  /* line 134, src/components/_grid.scss */
+  /* line 135, src/components/_grid.scss */
   .column .item h4 {
     font-size: 1.9em;
     margin: 11px 0;
   }
-  /* line 138, src/components/_grid.scss */
+  /* line 139, src/components/_grid.scss */
   .column .item h4 .inquire {
     font-size: 19px;
   }
-  /* line 143, src/components/_grid.scss */
+  /* line 144, src/components/_grid.scss */
   .column .item h1 {
     font-size: 10em;
   }
 }
-/* line 149, src/components/_grid.scss */
+/* line 150, src/components/_grid.scss */
 .column .item span {
   position: relative;
   top: -2px;
   font-size: 0.9em;
   color: #5a5e60;
 }
-/* line 160, src/components/_grid.scss */
+/* line 161, src/components/_grid.scss */
 .column img {
   width: 100%;
   outline: #d9d9d9 solid 0px;
@@ -1516,7 +1517,7 @@ footer a {
   transition: outline 0.6s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-/* line 169, src/components/_grid.scss */
+/* line 170, src/components/_grid.scss */
 .no-touch .column .item:hover img {
   outline: #fb2323 solid 20px;
 }
